--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/app_name"
+            android:text="@string/amps"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </LinearLayout>
