--- a/app/src/main/res/layout/activity_project_list.xml
+++ b/app/src/main/res/layout/activity_project_list.xml
@@ -7,7 +7,11 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin" >
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:textStyle="bold"
+        android:typeface="serif"
+        android:gravity="left"
+        >
 
         <!-- <TableRow
             android:layout_width="match_parent"
