--- a/app/src/main/res/layout/activity_project_details.xml
+++ b/app/src/main/res/layout/activity_project_details.xml
@@ -1,17 +1,24 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
+android:orientation="vertical"
 tools:context=".ProjectDetailsActivity" >
 
-<TableLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+        <!--android:scrollbars="vertical"-->
+
+<!--TableLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:textStyle="bold"
     android:typeface="serif"
     android:gravity="left"
-    >
+    -->
 
     <!-- <TableRow
         android:layout_width="match_parent"
@@ -26,12 +33,37 @@ tools:context=".ProjectDetailsActivity" >
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:text="@string/name" />
     </TableRow> -->
+    <!--<android.support.v7.widget.CardView-->
+        <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+        <!--android:id="@+id/cardRowFolderList"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--<RelativeLayout-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="fill_parent">-->
 
-    <TableLayout
-        android:id="@+id/tableRowFolderList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </TableLayout>
-</TableLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/textView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textStyle="bold"-->
+                <!--android:layout_alignParentTop="true"/>-->
 
-</ScrollView>
+            <!--<TextView-->
+                <!--android:id="@+id/textView2"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_below="@+id/textView"/>-->
+        <!--</RelativeLayout>-->
+
+    <!--</android.support.v7.widget.CardView>-->
+
+    <!--<TableLayout-->
+        <!--android:id="@+id/tableRowFolderList"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+    <!--</TableLayout>-->
+<!--/TableLayout-->
+
+</LinearLayout>
