--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:background="@color/MilkWhite"
+        android:alpha="0.8"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -36,7 +38,8 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="@string/username" />
+                android:hint="@string/username"
+                android:textColor="@color/ForestGreen"/>
         </TableRow>
 
         <TableRow>
@@ -48,7 +51,8 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="@string/password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="@color/ForestGreen"/>
         </TableRow>
 
         <TableRow>
@@ -57,6 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="Remember username and password?"
+                android:textColor="@color/ForestGreen"
                 />
         </TableRow>
 
@@ -69,6 +74,7 @@
                 android:layout_weight="0.5"
                 android:background="?android:attr/selectableItemBackground"
                 android:onClick="onClick"
+                android:textColor="@color/ForestGreen"
                 android:text="@string/button_login"/>
 
             <Button
@@ -76,6 +82,7 @@
                 android:layout_width="0px"
                 android:layout_gravity="center"
                 android:layout_weight="0.5"
+                android:textColor="@color/ForestGreen"
                 android:background="?android:attr/selectableItemBackground"
                 android:text="@string/button_cancel"
                 android:onClick="onClick"/>
