--- a/app/src/main/res/layout/activity_project_list.xml
+++ b/app/src/main/res/layout/activity_project_list.xml
@@ -1,17 +1,22 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context=".ProjectListActivity" >
 
-    <TableLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:textStyle="bold"
-        android:typeface="serif"
-        android:gravity="left"
-        >
+        android:layout_height="match_parent"/>
+
+    <!--<TableLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+        <!--android:textStyle="bold"-->
+        <!--android:typeface="serif"-->
+        <!--android:gravity="left"-->
+        <!-->-->
 
         <!-- <TableRow
             android:layout_width="match_parent"
@@ -27,11 +32,11 @@
                 android:text="@string/name" />
         </TableRow> -->
 
-        <TableLayout
-            android:id="@+id/tableRowProjectList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </TableLayout>
-    </TableLayout>
+        <!--<TableLayout-->
+            <!--android:id="@+id/tableRowProjectList"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
+        <!--</TableLayout>-->
+    <!--</TableLayout>-->
 
-</ScrollView>
+</LinearLayout>
