--- a/app/src/main/res/layout/activity_cardview_layout_for_preview.xml
+++ b/app/src/main/res/layout/activity_cardview_layout_for_preview.xml
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="User Id: "
+                android:text="Lasted updated user name: "
                 android:layout_gravity="center_vertical"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
