--- a/app/src/main/res/layout/activity_project_details.xml
+++ b/app/src/main/res/layout/activity_project_details.xml
@@ -5,6 +5,14 @@ android:layout_height="fill_parent"
 android:orientation="vertical"
 tools:context=".ProjectDetailsActivity" >
 
+    <Button
+        android:id="@+id/add_button"
+        android:layout_gravity="center"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Upload new file"
+        android:layout_margin="2dp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
