--- a/app/src/main/res/layout/activity_project_details.xml
+++ b/app/src/main/res/layout/activity_project_details.xml
@@ -10,8 +10,10 @@ tools:context=".ProjectDetailsActivity" >
         android:layout_gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Upload new file"
-        android:layout_margin="2dp"/>
+        android:text="Upload New File"
+        android:layout_margin="2dp"
+        android:textColor="@color/ForestGreen"
+        android:background="?android:attr/selectableItemBackground"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
