--- a/app/src/main/res/layout/activity_asset_upload.xml
+++ b/app/src/main/res/layout/activity_asset_upload.xml
@@ -1,50 +1,63 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:gravity="center">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".ImageUploadActivity" >
+        tools:context=".ImageUploadActivity"
+        android:gravity="center"
+        android:layout_gravity="center">
 
         <ImageView
             android:id="@+id/fileUploaded"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="60dp"
             tools:ignore="ContentDescription" />
-
-        <Button
-            android:id="@+id/btn_upload"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/revision_desc"
-            android:background="?android:attr/selectableItemBackground"
-            android:onClick="onClick"
-            android:text="@string/upload" />
 
         <EditText
             android:id="@+id/revision_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/btn_upload"
-            android:layout_alignRight="@+id/btn_upload"
-            android:layout_below="@+id/fileUploaded"
-            android:layout_marginLeft="9dp"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/Description"
             android:inputType="textMultiLine" />
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/btn_upload"
+            android:gravity="center"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:onClick="onClick"
+            android:textColor="@color/ForestGreen"
+            android:text="@string/upload"
+            android:layout_marginTop="27dp" />
+
+        <Button
+            android:id="@+id/btn_reset"
+            android:layout_width="250dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/btn_upload"
+            android:background="?android:attr/selectableItemBackground"
+            android:onClick="onClick"
+            android:textColor="@color/ForestGreen"
+            android:text="@string/reset" />
+
+
+
+    </LinearLayout>
 </ScrollView>
