--- a/app/src/main/res/layout/activity_project_details.xml
+++ b/app/src/main/res/layout/activity_project_details.xml
@@ -10,7 +10,7 @@ tools:context=".ProjectDetailsActivity" >
         android:layout_gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Upload New File"
+        android:text="@string/upload_new_file"
         android:layout_margin="2dp"
         android:textColor="@color/ForestGreen"
         android:background="?android:attr/selectableItemBackground"/>
