--- a/app/src/main/res/menu/menu_asset_upload.xml
+++ b/app/src/main/res/menu/menu_asset_upload.xml
@@ -2,6 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.amps.fyp_amps_android_yishan.AssetUploadActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/upload_item_image_or_video"
+        android:title="@string/image_or_videos"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/upload_item_other_types"
+        android:title="@string/other_types"
+        app:showAsAction="always" />
+
 </menu>
