- done:  simple image preview and video preview are done - todo: file types of video, audio, image can be uploaded, but others cannot - todo: need to modify image preview to support a higher accuracy

--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <com.example.amps.mediaPlayer.VideoEnabledWebView
+        <com.example.amps.fyp_amps_android_yishan.preview.VideoEnabledWebView
             android:id="@+id/webView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
