--- a/app/src/main/res/layout/activity_image_review_full_screen.xml
+++ b/app/src/main/res/layout/activity_image_review_full_screen.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical" >
 
-    <com.example.amps.touch.TouchImageView
+    <com.example.amps.fyp_amps_android_yishan.touch.TouchImageView
         android:id="@+id/imageReviewFullScreen"
         android:layout_width="match_parent"
         android:layout_height="0dp"
