--- a/app/src/main/res/layout/fragment_assets_preview.xml
+++ b/app/src/main/res/layout/fragment_assets_preview.xml
@@ -181,6 +181,17 @@
     android:orientation="vertical"
     tools:context=".AssetsPreviewFragment" >
 
+    <Button
+        android:id="@+id/imageButtonUpload"
+        android:layout_gravity="center"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/upload_new_file"
+        android:layout_margin="2dp"
+        android:textColor="@color/ForestGreen"
+        android:background="?android:attr/selectableItemBackground"/>
+
+
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -201,14 +212,13 @@
             android:onClick="onClick"
             android:src="@drawable/ic_action_read" />
 
-        <ImageButton
-            android:id="@+id/imageButtonUpload"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:background="@null"
-            android:onClick="onClick"
-            android:src="@drawable/av_upload" />
+        <!--<ImageButton-->
+            <!--android:id="@+id/imageButtonUpload"-->
+            <!--android:layout_width="0px"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.2"-->
+            <!--android:background="@null"-->
+            <!--android:src="@drawable/av_upload" />-->
 
         <ImageButton
             android:id="@+id/imageButtonDownload"
