--- a/app/src/main/res/menu/menu_asset_detail.xml
+++ b/app/src/main/res/menu/menu_asset_detail.xml
@@ -2,6 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.amps.fyp_amps_android_yishan.AssetDetailActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_logout"
+        android:title="@string/logout"
+        android:orderInCategory="10"
+        app:showAsAction="never" />
 </menu>
