--- a/app/src/main/res/layout/activity_cardview_layout_for_preview.xml
+++ b/app/src/main/res/layout/activity_cardview_layout_for_preview.xml
@@ -19,10 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_alignParentTop="true"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
+            android:paddingLeft="@dimen/cardview_padding"
+            android:paddingRight="@dimen/cardview_padding"
+            android:paddingTop="@dimen/cardview_padding"
+            android:paddingBottom="@dimen/cardview_padding"
             />
         </android.support.v7.widget.CardView>
 
@@ -60,7 +60,7 @@
                 android:paddingBottom="5dp"/>
             <TextView
                 android:id="@+id/cardText1"
-                android:textColor="@color/ForestGreen"
+                android:textColor="@color/Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -90,7 +90,7 @@
                 android:paddingBottom="5dp"/>
             <TextView
                 android:id="@+id/cardText2"
-                android:textColor="@color/ForestGreen"
+                android:textColor="@color/Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -120,7 +120,7 @@
                 android:paddingBottom="5dp"/>
             <TextView
                 android:id="@+id/cardText3"
-                android:textColor="@color/ForestGreen"
+                android:textColor="@color/Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -150,7 +150,7 @@
                 android:paddingBottom="5dp"/>
             <TextView
                 android:id="@+id/cardText4"
-                android:textColor="@color/ForestGreen"
+                android:textColor="@color/Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -180,7 +180,7 @@
                 android:paddingBottom="5dp"/>
             <TextView
                 android:id="@+id/cardText5"
-                android:textColor="@color/ForestGreen"
+                android:textColor="@color/Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
