--- a/app/src/main/res/layout/activity_project_details.xml
+++ b/app/src/main/res/layout/activity_project_details.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/upload_new_file"
+        android:text="@string/upload_or_create"
         android:layout_margin="2dp"
         android:textColor="@color/ForestGreen"
         android:background="?android:attr/selectableItemBackground"/>
