--- a/app/src/main/res/menu/menu_folder_create_upload.xml
+++ b/app/src/main/res/menu/menu_folder_create_upload.xml
@@ -4,6 +4,11 @@
     tools:context="com.example.amps.fyp_amps_android_yishan.AssetUploadActivity">
 
     <item
+        android:id="@+id/create_new_folder"
+        android:title="@string/create_new_folder"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/upload_item_image_or_video"
         android:title="@string/upload_image_or_videos"
         app:showAsAction="always" />
