--- a/app/src/main/res/layout/activity_cardview_layout_for_preview.xml
+++ b/app/src/main/res/layout/activity_cardview_layout_for_preview.xml
@@ -10,19 +10,14 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
         >
 
         <ImageView
             android:id="@+id/cardImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/cardview_small_file_size_width"
+            android:layout_height="@dimen/cardview_small_file_size_height"
             android:layout_gravity="center_horizontal"
             android:layout_alignParentTop="true"
-            android:paddingLeft="@dimen/cardview_padding"
-            android:paddingRight="@dimen/cardview_padding"
-            android:paddingTop="@dimen/cardview_padding"
-            android:paddingBottom="@dimen/cardview_padding"
             />
         </android.support.v7.widget.CardView>
 
@@ -30,19 +25,20 @@
         android:id="@+id/card_view2"
         android:layout_gravity="center"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_margin="2dp"
         android:background="@color/SlimeGreen"
         >
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
+            android:background="@color/SlimeGreen"
             android:alpha="0.8">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/SlimeGreen"
