--- a/app/src/main/res/layout/fragment_assets_preview.xml
+++ b/app/src/main/res/layout/fragment_assets_preview.xml
@@ -195,7 +195,8 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/padding_buttom">
 
         <TextView
             android:id="@+id/textViewPadding1"
