--- a/app/src/main/res/layout/activity_cardview_folder_layout.xml
+++ b/app/src/main/res/layout/activity_cardview_folder_layout.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</LinearLayout-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -15,16 +10,14 @@
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        >
+        android:layout_height="wrap_content">
 
         <!--card_view:cardCornerRadius="2dp"-->
         <!--card_view:contentPadding="10dp"-->
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             android:background="@color/lightgrey"
             android:alpha="0.8"
@@ -38,7 +31,8 @@
                 android:layout_gravity="center_vertical"
                 android:scaleType="fitCenter"
                 android:layout_alignParentTop="true"
-                android:paddingRight="10dp"/>
+                android:paddingRight="10dp"
+                android:layout_alignParentLeft="true"/>
 
             <TextView
                 android:id="@+id/cardText"
@@ -46,9 +40,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/cardImage"/>
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/clickIcon"
+                android:layout_width="@dimen/cardview_icon_size"
+                android:layout_height="@dimen/cardview_icon_size"
+                android:layout_gravity="center"
+                android:src="@mipmap/circle_icon"
+                android:scaleType="fitCenter"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true" />
+
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 
