--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="cardview_padding">10dp</dimen>
     <dimen name="cardview_thumbnail_size">64dp</dimen>
+    <dimen name="cardview_icon_size">28dp</dimen>
     <dimen name="cardview_small_file_size_height">200dp</dimen>
     <dimen name="cardview_small_file_size_width">300dp</dimen>
 
