- able to prompt for deletion - todo: file types of video, audio, image can be uploaded, but others cannot

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,8 @@
 
     <style name="dialogTheme" parent="Theme.AppCompat.Dialog">
         <item name="android:windowNoTitle">true</item>
-        ...
+        <item name="popupMenuStyle">@style/PopupMenu.Example</item>
+
     </style>
 
     <!-- Application theme. -->
