--- a/app/src/main/res/menu/menu_project_details.xml
+++ b/app/src/main/res/menu/menu_project_details.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.amps.fyp_amps_android_yishan.ProjectDetailsActivity">
+    tools:context=".ProjectDetailsActivity">
 
     <item android:id="@+id/action_logout"
         android:title="@string/logout"
