- done uploading different kinds of files - todo: testing deletion of files and uploading of files. file types of video, audio, image can be uploaded, but others cannot

--- a/app/src/main/res/menu/menu_folder_create_upload.xml
+++ b/app/src/main/res/menu/menu_folder_create_upload.xml
@@ -10,12 +10,7 @@
 
     <item
         android:id="@+id/upload_item_image_or_video"
-        android:title="@string/upload_image_or_videos"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/upload_item_other_types"
-        android:title="@string/upload_other_types"
+        android:title="@string/upload_files"
         app:showAsAction="always" />
 
 </menu>
