--- a/app/src/main/res/layout/activity_cardview_layout_for_preview.xml
+++ b/app/src/main/res/layout/activity_cardview_layout_for_preview.xml
@@ -16,7 +16,8 @@
             android:layout_width="@dimen/cardview_small_file_size_width"
             android:layout_height="@dimen/cardview_small_file_size_height"
             android:layout_alignParentTop="true"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:onClick="onClick"/>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
