--- a/app/src/main/res/layout/fragment_assets_preview.xml
+++ b/app/src/main/res/layout/fragment_assets_preview.xml
@@ -204,14 +204,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.2" />
 
-        <ImageButton
-            android:id="@+id/imageButtonReview"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:background="@null"
-            android:onClick="onClick"
-            android:src="@drawable/ic_action_read" />
+        <!--<ImageButton-->
+            <!--android:id="@+id/imageButtonReview"-->
+            <!--android:layout_width="0px"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.2"-->
+            <!--android:background="@null"-->
+            <!--android:onClick="onClick"-->
+            <!--android:src="@drawable/ic_action_read" />-->
 
         <!--<ImageButton-->
             <!--android:id="@+id/imageButtonUpload"-->
