--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,17 @@
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <item name="android:textColor">@color/ForestGreen</item>
         <item name="android:typeface">serif</item>
+        <item name="android:popupMenuStyle">@style/AndroidSRC.PopupMenu</item>
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
         -->
+    </style>
+
+    <style name="AndroidSRC.PopupMenu" parent="android:Widget.Holo.Light.ListPopupWindow">
+        <!--<item name="android:popupBackground">#21B6A8</item>-->
+        <item name="android:popupBackground">@color/GreenThumb</item>
     </style>
 
     <style name="dialogTheme" parent="Theme.AppCompat.Dialog">
